--- a/package.json
+++ b/package.json
@@ -3,9 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "firebase": "^5.8.2",
+    "lodash": "^4.17.11",
     "react": "^16.7.0",
+    "react-bootstrap": "^1.0.0-beta.5",
     "react-dom": "^16.7.0",
-    "react-scripts": "2.1.3"
+    "react-quill": "^1.3.3",
+    "react-render-html": "^0.6.0",
+    "react-scripts": "2.1.3",
+    "sweetalert2": "^8.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -21,5 +27,9 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "eslint": "5.6.0",
+    "eslint-plugin-react": "^7.12.4"
+  }
 }
